1.3.0-alpha.4 - zoomType now uses Identifier instead of String for name, Added Identifier/String converter, translation now has namespace support.